# GameEngine

./: CMakeLists.txt
Empty/: EmptyApplication.cpp
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  GraphicsManager.cpp  GraphicsManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  Interface.hpp
Learnnote/: Chap01.md  Chap02.md
Platform/Linux/: helloengin_xcb  helloengine_openGL  helloengine_openGL.cpp  helloengine_xcb.c
